<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">菲普莱考试</string>
    <string name="host_style">考试版本</string>
    <string name="go_back">返回</string>
    <string name="advanced_setting">高级设置</string>
    <string name="txt_stu_code">考号：%1$s</string>
    <string name="txt_stu_name">姓名：%1$s</string>
    <string name="test_speak_hint">请%1$s第%2$d次准备</string>
    <string name="data_txt_stu_code">考号：%1$s</string>
    <string name="data_txt_stu_name">姓名：%1$s</string>
    <string name="data_txt_stu_sex">姓别：%1$s</string>
    <string name="data_txt_stu_result">最终成绩：%1$s</string>
    <string name="jump_rope">跳绳</string>
    <string name="broad_Jump">跳远</string>
    <string name="jump_rope_setting">1.跳绳设置</string>
    <string name="hand_setting">2.手柄配对</string>
    <string name="jump_rope_start">3.开始测试</string>
    <string name="rope_setting">跳绳设置</string>
    <string name="rope_test_time">测试时间</string>
    <string name="hand_max">手柄个数</string>
    <string name="studentName">姓名 :</string>
    <string name="studentGender">性别 :</string>
    <string name="studentCode">考号 :</string>
    <string name="grades">成绩 :</string>
    <string name="grades1">成绩1 :</string>
    <string name="grades2">成绩2 :</string>
    <string name="grades3">成绩3 :</string>
    <string name="startTime">开始</string>
    <string name="stop_using">暂停使用</string>
    <string name="end">结束</string>
    <string name="service_bind_fail">aidl service bind failed</string>
    <string name="service_bind_success">aidl service bind success</string>
    <string name="stand_jump">立定跳远</string>
    <string name="start_test">开始测试</string>
    <string name="system_setting">系统设置</string>
    <string name="data_manage">数据管理</string>
    <string name="title_activity_system_setting">系统设置</string>
    <string name="title_activity_data_manage">数据管理</string>
    <string name="title_activity_about">关于</string>
    <string name="version_info"><b>版本信息:</b></string>
    <string name="title_activity_check">CheckActivity</string>
    <string name="title_activity_splash_screen">控制主机</string>
    <string name="title_activity_data_display">DataDisplayActivity</string>
    <string name="student_Name">姓名:%1$s</string>
    <string name="student_Gender">性别:%1$s</string>
    <string name="student_Code">学号:%1$s</string>
    <string name="student_Result">成绩:%1$s</string>
    <string name="student_Portrait">头像:</string>
    <string name="student_nonentity">该考生不存在</string>
    <!--账号提示-->
    <string name="hint_account">请输入用户名</string>
    <!--密码提示-->
    <string name="hint_pass">请输入密码</string>
    <string name="loading_hint">正在处理，请等待...</string>
    <string name="loading_update">正在更新所有数据，请等待...</string>
    <string name="speak_result">%1$s成绩%2$s</string>

    <string name="transmitting_terminal">发射端</string>
    <string name="receiving_terminal">接收端</string>
    <string name="normal">正常</string>
    <string name="ununited">未连接</string>
    <string name="abnormal">异常</string>

    <string name="device_versions">硬件版本号:V%1$s</string>
    <string name="addStu_dialog_title">新增提示</string>
    <string name="addStu_dialog_content">无考生信息，是否新增</string>
    <string name="warning">警告</string>
    <string name="illegal_return_hint">确认是否违规返回？</string>
    <string name="print_more_hint">选择打印考生数量过多，确定继续打印？</string>
    <string name="low_battery_goto_hint">存在低电量设备,是否进入测试?</string>
    <string name="restart_confirm_hint">重新开始将取消当前测试,确定重新开始测试吗？</string>
    <string name="device_disconnect_save_result_hint">存在考生设备状态为断开连接,确定保存成绩？</string>
    <string name="confirm_exit_test_hint">确定退出当前测试吗？</string>
    <string name="clear_device_hint">是否清除当前设备?</string>
    <string name="clear_all_device_hint">是否清除所有设备?</string>
    <string name="foul">犯规</string>
    <string name="confirm_result">确认成绩</string>

    <string name="thermometer_dialog_title">请测量体温</string>
    <string name="thermometer_dialog_msg">使用体温枪对准考生额头进行测量</string>
    <string name="dialog_warm_prompt">温馨提示</string>
    <string name="thermometer_open_dialog_msg">请启动体温枪或未进行体温枪连接</string>

    <string name="download_photo_select">继续下载（%1$d / %2$d）</string>
    <string name="afr_count_hint">全部考生：%1$d          考生特征：%2$d </string>
    <string name="download_title">名单下载</string>
</resources>
