<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="526dp"
    android:layout_height="wrap_content"
    android:background="@drawable/btn_bg_white"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:id="@+id/view_terminal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/transmitting_terminal"
            android:textSize="20sp" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/receiving_terminal"
            android:textSize="20sp" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/view_bottom"
        android:layout_below="@+id/view_terminal" />

    <LinearLayout
        android:id="@+id/view_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:drawableLeft="@drawable/attention"
            android:drawablePadding="10dp"
            android:text="@string/normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:drawableLeft="@drawable/default_icon"
            android:drawablePadding="10dp"
            android:text="@string/ununited" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:drawableLeft="@drawable/complted"
            android:drawablePadding="10dp"
            android:text="@string/abnormal" />
    </LinearLayout>
</RelativeLayout>